<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bus_stop_fragment"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fffbfbfb"
            android:layout_margin="3dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/search_textview"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffbababa">
        </LinearLayout>

        <SearchView
                android:id="@+id/bus_stop_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_hint">
        </SearchView>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/stop_info"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffbababa">
        </LinearLayout>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/bus_stop_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="2dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/bus_stop_name"/>

            <TextView
                    android:id="@+id/bus_stop_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="2dp"
                    android:textSize="12sp"
                    android:textColor="#ff909090"
                    android:text="@string/bus_stop_id"/>
        </LinearLayout>


        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="13dp"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:text="@string/next_arrival"/>

            <ImageButton
                    android:id="@+id/refresh_icon"
                    android:layout_width="26dip"
                    android:layout_height="26dip"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_action_refresh"
                    android:scaleType="fitCenter"
                    android:background="#fffbfbfb"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:visibility="invisible" />
        </RelativeLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#ffbababa">
        </LinearLayout>

        <TextView
                android:id="@+id/bus_notice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="description"
                android:textStyle="italic"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:gravity="center"
                android:visibility="gone"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loading"
                android:visibility="gone">

            <ProgressBar
                    android:id="@+id/loading_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

            <TextView
                    android:id="@+id/loading_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/loading_icon"
                    android:layout_below="@+id/loading_icon"
                    android:text="Loading. . ."
                    android:textSize="10sp" />
        </RelativeLayout>


        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/routes_list"
                android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>