<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/search_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:background="#ffffff"
        android:layout_above="@+id/select_type_text"
        android:visibility="invisible">

        <TextView
            android:id="@+id/stop_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="Transport Stop ID"
            android:textColor="#000000"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/transport_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="#ffff254c"
            android:textColor="#ffffff"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:textSize="20sp"
            android:text="Route"
            android:gravity="center"/>

        <ProgressBar
            android:id="@+id/loading_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/transport_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Time"
            android:textColor="#000000"
            android:textSize="45sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <ImageButton
            android:id="@+id/refresh_icon"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_action_refresh"
            android:background="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/last_updated_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last updated ..."
            android:layout_alignParentBottom="true"
            android:textColor="#999999"/>
    </RelativeLayout>



    <TextView
        android:id="@+id/select_type_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/select_transport_type"
        android:layout_above="@+id/transport_type"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transport_type"
        android:entries="@array/transport_type"
        android:layout_above="@+id/select_route_text"/>

    <TextView
        android:id="@+id/select_route_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/select_route"
        android:layout_above="@+id/transport_route"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transport_route"
        android:layout_above="@+id/select_direction_text"/>

    <TextView
        android:id="@+id/select_direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/select_direction"
        android:layout_above="@+id/transport_direction"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transport_direction"
        android:layout_above="@+id/select_stop_text"/>

    <TextView
        android:id="@+id/select_stop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:text="@string/select_stop"
        android:layout_above="@+id/transport_stop"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transport_stop"
        android:layout_above="@+id/search_route_button"/>

    <Button
        android:id="@+id/search_route_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Search" />

</RelativeLayout>